--- a/views/Student_Sub_Info.ejs
+++ b/views/Student_Sub_Info.ejs
@@ -16,12 +16,14 @@
 				<div>
 					<div>
 						<ul>
-							<li><a href="/Faculty_Info">Faculty Details</a></li>
-							<li><a href="/Faculty_Sub_Info">Course Reports</a></li>
-							<li><a href="/Faculty_Resources">Maintain course info</a></li>
-							<li><a href="/Faculty_Broadcasts">Broadcasts</a></li>
-							<li><a href="/Student_Feedback">Feedbacks</a></li>
-							<li><a href="/MainLander">Log Out</a></li>
+							<li><a href="/Student_Home">Home</a></li>
+							<li><a href="/Student_Info">Personal Details</a></li>
+										  <li><a href="/Student_Report">Course Reports</a></li>
+										  <li><a href="/Student_Grade_Tracking">Grade Tracking</a></li>
+										  <li><a href="/Student_Attedance">Attendence</a></li>
+										  <li><a href="/Student_Feedback">Feedbacks</a></li>
+										  <li><a href="/Student_Resources">Resources</a></li>
+										  <li><a href="/Student_Broadcasta">Broadcasts</a></li>
 						</ul>
 					</div>
 				</div>
@@ -40,7 +42,9 @@
 					
 					<%}%>
 				</select>
-				<button type="submit">Find Course Report</a></button>
+				<div style="display: flex; justify-content: center; margin-top: 20px;">
+					<button type="submit" style="background-color: white; color: black; border: none; border-radius: 10px;">Find Course Report</a></button>
+				</div>
 			</form>
 			</div>
 		</div>
