--- a/public/css/Student_Attendance.css
+++ b/public/css/Student_Attendance.css
@@ -14,7 +14,7 @@
   body {
     font-family: "Roboto", sans-serif;
     line-height: 1.4;
-    color: white;
+    color: rgb(10, 10, 10);
     background-color: #4a92a8;
   }
   
