--- a/public/css/Student_Feedback.css
+++ b/public/css/Student_Feedback.css
@@ -14,7 +14,7 @@
   body {
     font-family: "Roboto", sans-serif;
     line-height: 1.4;
-    color: white;
+    color: rgb(14, 14, 14);
     background-color: #4a92a8;
   }
 
@@ -116,17 +116,23 @@
     font-size: 1.3rem;
   }
   
-  .btn {
-    display: inline-block;
-    border: none;
-    background: var(--primary-color);
+  .btn{
+    width: 60%;
+    height: 40px;
+    margin: 10px auto;
+    justify-content: center;
+    display: block;
     color: #fff;
-    padding: 0.75rem 1.5rem;
-    transition: opacity 1s ease-in-out;
-    text-decoration: none;
-    margin: 1rem;
-    font-size: 1.25rem;
-  }
+    background: #573b8a;
+    font-size: 1em;
+    font-weight: bold;
+    margin-top: 20px;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    transition: .2s ease-in;
+    cursor: pointer;
+    }
   
   .btn:hover {
     opacity: 0.7;
