--- a/public/css/Student_Grade_Tracking.css
+++ b/public/css/Student_Grade_Tracking.css
@@ -14,7 +14,7 @@
   body {
     font-family: "Roboto", sans-serif;
     line-height: 1.4;
-    color: white;
+    color: rgb(1, 1, 1);
     background-color: #4a92a8;
   }
   
