--- a/public/css/Student_Resources.css
+++ b/public/css/Student_Resources.css
@@ -14,7 +14,7 @@
   body {
     font-family: "Roboto", sans-serif;
     line-height: 1.4;
-    color: white;
+    color: rgb(22, 22, 22);
     background-color: #4a92a8;
   }
   
