--- a/views/Faculty_Home.ejs
+++ b/views/Faculty_Home.ejs
@@ -19,7 +19,7 @@
 							<li><a href="/Faculty_Home">Home</a></li>
 							<li><a href="/Faculty_Info">Faculty Details</a></li>
 							<li><a href="/Faculty_Sub_Info">Course Reports</a></li>
-							<li><a href="/Faculty_Resources">Maintain course info</a></li>
+							<li><a href="/Faculty_Resources">Course Resources</a></li>
 							<li><a href="/Faculty_Broadcasts">Broadcasts</a></li>
 						</ul>
 					</div>
