--- a/views/Faculty_Resources.ejs
+++ b/views/Faculty_Resources.ejs
@@ -20,7 +20,7 @@
 							<li><a href="/Faculty_Home">Home</a></li>
 							<li><a href="/Faculty_Info">Faculty Details</a></li>
 							<li><a href="/Faculty_Sub_Info">Course Reports</a></li>
-							<li><a href="/Faculty_Resources">Maintain course info</a></li>
+							<li><a href="/Faculty_Resources">Course Resources</a></li>
 							<li><a href="/Faculty_Broadcasts">Broadcasts</a></li>
 						</ul>
 					</div>
@@ -28,7 +28,7 @@
 			</div>
 		</div>
         <div class="container">
-            <div class="title">Subject</div>
+            <div class="title">Resources</div>
 			<div class="course-table" style="color: black;">
 				<table class="table table-striped" style="border: 2px solid black;">
 				  <tr class="table-warning" >
