--- a/public/css/Faculty_Login_Style.css
+++ b/public/css/Faculty_Login_Style.css
@@ -6,7 +6,7 @@ body{
 	align-items: center;
 	min-height: 100vh;
 	font-family: 'Jost', sans-serif;
-	background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
+	background: #4a92a8;
 }
 .main{
 	width: 350px;
@@ -57,8 +57,8 @@ button{
 	margin: 10px auto;
 	justify-content: center;
 	display: block;
-	color: #fff;
-	background: #573b8a;
+	color: #000000;
+	background: #eee;
 	font-size: 1em;
 	font-weight: bold;
 	margin-top: 20px;
@@ -69,7 +69,7 @@ button{
 	cursor: pointer;
 }
 button:hover{
-	background: #6d44b8;
+	background: #0a7292;
 }
 .login{
 	position: relative;
