--- a/views/Faculty_Sub_Report.ejs
+++ b/views/Faculty_Sub_Report.ejs
@@ -10,7 +10,7 @@
 		<title>Faculty Course Report</title>
 	</head>
 	<body>
-		<div class="menu-wrap">
+    <div class="menu-wrap">
 			<input type="checkbox" class="toggler" />
 			<div class="hamburger"><div></div></div>
 			<div class="menu">
@@ -20,7 +20,7 @@
 							<li><a href="/Faculty_Home">Home</a></li>
 							<li><a href="/Faculty_Info">Faculty Details</a></li>
 							<li><a href="/Faculty_Sub_Info">Course Reports</a></li>
-							<li><a href="/Faculty_Resources">Maintain course info</a></li>
+							<li><a href="/Faculty_Resources">Course Resources</a></li>
 							<li><a href="/Faculty_Broadcasts">Broadcasts</a></li>
 						</ul>
 					</div>
