--- a/views/Student_Info.ejs
+++ b/views/Student_Info.ejs
@@ -87,7 +87,7 @@
 			</div>
 		</div>
 		<div class="changepass">
-			<form action="/Faculty_Info" method="post">
+			<form action="/Student_Info" method="post">
 			<input type="password" name="password" placeholder="   Password"  style="margin-left: 615px;
 			margin-top: 30px;
 			width: 20%;
