--- a/views/Faculty_Signup.ejs
+++ b/views/Faculty_Signup.ejs
@@ -13,7 +13,7 @@
 			<div class="login">
 				<form action="/Faculty_Signup" method="post">
 					<label for="chk" aria-hidden="true">SignUp</label>
-                    <input type="name" name="name" placeholder="Name" required="">
+                    <input type="name" name="name" placeholder="Name" required="" minlength="3" maxlength="15">
 					<input type="email" name="email" placeholder="Email" required="">
 					<button type="submit">Login</button> 
 				</form>
