--- a/views/Student_Home_Login.ejs
+++ b/views/Student_Home_Login.ejs
@@ -29,7 +29,7 @@
 			<div class="signup" >
 				<form action="/Student_Home_Login" method="post">
 					<label for="chk" aria-hidden="true">New User</label>
-					<input type="text" name="name" placeholder="User name" required="">
+					<input type="text" name="name" placeholder="User name" required="" minlength="3" maxlength="15">
 					<input type="text" name="email" placeholder="Email" required="">
 					<input type="date" name="DOB" placeholder="DateofBirth" required="">
 					<!-- <input type="password" name="pswd" placeholder="New Password" required=""> -->
