--- a/views/Student_Info.ejs
+++ b/views/Student_Info.ejs
@@ -92,7 +92,8 @@
 			margin-top: 30px;
 			width: 20%;
 			height: 35px;
-			border-radius: 5px;" required="" id="changepassfield">
+			border-radius: 5px;" required="" id="changepassfield"
+			minlength="8" maxlength="15">
 			<button type="submit" id ="passchangebutton" style="width: 20%;">Change Password</button>
 			</form>
 		</div>
